# remarkable

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: eslint.yml  isort.yml  lint.yml  production.yml  staging.yml  unittest.yml
frontend/: .eslintrc  package-lock.json
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx
frontend/app/routes/: _index.tsx
remarkable/backend/server/: __init__.py  app.py  config.py  controller.py  models.py
remarkable/backend/server/controller/: __init__.py  user_controller.py
remarkable/backend/server/housing/config/: address.py  rent.py  sale.py
remarkable/backend/server/housing/controller/: address.py  rent.py  sale.py
remarkable/backend/server/housing/model/: address.py  rent.py  sale.py
remarkable/backend/server/housing/models/: address.py  rent.py  sale.py
remarkable/backend/server/model/: user.py
remarkable/backend/server/service/: user_service.py
remarkable/backend/server/util/: dto.py
remarkable/backend/util/: uuid.py
scripts/: database.py
tests/: test_config.py  test_nothing.py
