[tool.poetry]
name = "remarkable"
version = "0.1.0"
description = ""
authors = ["Gideon Tong <gideon@gideontong.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
