[tool.poetry]
name = "remarkable"
version = "0.1.0"
description = ""
authors = ["Gideon Tong <gideon@gideontong.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-bcrypt = "^1.0.1"
flask-migrate = "^4.0.4"
pyjwt = "^2.6.0"
flask-restx = "^1.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
isort = "^5.12.0"
pylint = {extras = ["spelling"], version = "^2.17.2"}
black = {extras = ["jupyter"], version = "^23.3.0"}
flask-testing = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
